welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:4: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
    while (isFacingTrail() == false) {
                        ^SlugSnail:21: error: object java.awt.Color is not a value
    if (getCouleurSol() == Color) {
                           ^