welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
  while (estSurBiscuit() == false) {
    while (isFacingTrail() == false) {
      gauche()
    }
    baisseBrosse()
    leveBrosse()
    avance()
  }
  baisseBrosse()
  leveBrosse()
  prendBiscuit()
}

def isFacingTrail(c:Color):Boolean = {
  if (estFaceMur) {
    return false
  } else {
    avance()
    if (getCouleurSol() == Color) {
      recule()
      return true
    } else {
      recule()
      return false
    }
  }
}